# MimiCodec

./: .gitignore  ANDROID_PORT_PLAN.md  Cargo.toml  LICENSE  README.md  REPORT.md
mimi-cli/: Cargo.toml
mimi-cli/src/: main.rs
mimi-core/: Cargo.toml
mimi-core/src/: lib.rs  mimi.rs  transformer.rs
mimi-jni/: Cargo.toml
mimi-jni/src/: lib.rs
mimi-onnx/: Cargo.toml
mimi-onnx/src/: lib.rs
mimi-pyo3/: Cargo.toml
mimi-pyo3/src/: lib.rs
scripts/: compare_backends.py  convert_to_gguf.py  export_onnx.py  export_streaming_onnx.py
