[workspace]
members = [
    "mimi-core",
    "mimi-cli",
    "mimi-pyo3",
]
exclude = ["mimi-jni"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[workspace.dependencies]
anyhow = "1"
candle = { version = "0.9.1", package = "candle-core" }
candle-flash-attn = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.4.12", features = ["derive"] }
hf-hub = { version = "0.4.3", features = ["tokio"] }
mimi-core = { path = "./mimi-core", version = "0.1.0" }
numpy = "0.23.0"
pyo3 = "0.23.0"
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
symphonia = { version = "0.5.3", features = ["all"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"

[profile.release]
debug = true
