[package]
name = "mimi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }

rayon = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[features]
default = ["metal"]
cuda = ["candle/cuda", "candle-nn/cuda"]
metal = ["candle/metal", "candle-nn/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
